# tauri-htmx-extension

./: .gitignore  README.md  package-lock.json  package.json
examples/hello/src/: htmx.js  index.html
examples/hello/src-tauri/src/: main.rs
examples/navigation/: index.html  package-lock.json  package.json
examples/navigation/src/: styles.css
examples/navigation/src-tauri/: Cargo.toml  tauri.conf.json
examples/navigation/src-tauri/src/: main.rs
examples/pomodoro/: README.md  bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts
examples/pomodoro/src/: built.css  main.ts  tauri-ext.js
examples/pomodoro/src-tauri/: Cargo.toml  tauri.conf.json
examples/pomodoro/src-tauri/src/: components.rs  main.rs
src/: htmx.js  index.html  main.js  tauri-ext.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
